event ind page alignment fix 2

--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -102,6 +102,23 @@ body {
     width: 100%;
 }
 
+.contDetPer {
+    padding: 0.5rem 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 80%;
+    margin-bottom: 0.5rem;
+}
+
+.contDetPerIn {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    color: inherit;
+    opacity: 0.8;
+}
+
 
 
 
