--- a/src/templates/eventTemp.module.css
+++ b/src/templates/eventTemp.module.css
@@ -24,7 +24,7 @@ body {
     color: #F3F5F7;
     width: 85%;
     order: 1;
-    top: 55%;
+    top: 60%;
     font-family: 'Montserrat', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 0.9rem;
 }
